Update slot assignment logic for causrlists